# yojimbo

./: .env.example  .gitignore  Dockerfile  README.md  WORKLOG.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
.venv311/: pyvenv.cfg
alembic/: env.py
alembic/versions/: 9a7e1c2d4f10_add_sms_and_timeslot_indexes.py  bf5cfbb6a13b_add_performance_indexes.py  c1f96c3b2c41_initial_schema.py
app/: config.py  database.py  main.py
app/api/: agent_config.py  analytics.py  appointments.py  audit_logs.py  caller_preferences.py  calls.py  contacts.py  dashboard.py  departments.py  gov_dashboard.py  health.py  knowledge.py  messages.py  reminders.py  router.py  status.py  twilio_webhooks.py  (+1 more)
scripts/: seed_departments.py
tests/: conftest.py  test_agent_config_i18n_errors.py  test_ai_agent.py  test_ai_integration.py  test_api.py  test_appointment_engine.py  test_appointments_crud.py  test_auth_and_search.py  test_call_flow_integration.py  test_caller_preference_index_safety.py  test_calls_i18n_errors.py  test_conversation_relay_integration.py  test_cors_vary_headers.py  test_dashboard_ws.py  test_db_index_migration_safety.py  test_departments_i18n_errors.py  test_gov_dashboard.py  test_government_platform.py  test_knowledge_and_audit_i18n_errors.py  test_models.py  test_new_features.py  test_platform_tier3.py  test_recordings_and_monitor.py  test_reminders.py  test_security_headers_cross_origin.py  test_security_headers_csp_ws_policy.py  test_tts_providers.py  test_twilio_webhooks.py  test_users_i18n_errors.py  test_validation.py
(+53 files in other folders)
